2004-10-06  Pascal Obry  <pascal@obry.org>

	* ai302*, charles*: 
	Move all ai302 files into ai302 sub-directory to be able to use an
	 external AI302 installation.

2003-10-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* memory_streams.ads:
	Update copyright notice.
	(Stream_Type): Initialize Last_Length field.

	* memory_streams.adb:
	Update copyright notice.
	Minor reformat.

2003-10-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Synchronize with zlib 1.2.2 releaze.

2004-09-29  Pascal Obry  <pascal@obry.org>

	* include.gpr:
	Minor casing fix.

	* makefile:
	Extensive changes to support build based on GNAT Project files.
	The makefile based build has been removed.

2004-09-25  Pascal Obry  <pascal@obry.org>

	* ai302-containers-indefinite_ordered_sets.adb:
	(Copy_Tree): Set Y to constant as not modified.

2003-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Synchronize with zlib 1.2.1.2 prereleaze.

2003-09-06  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib.ads, zlib.adb:
	Remove a few DOS style CR at the end of lines.

2004-09-02  Pascal Obry  <pascal@obry.org>

	* ai302-containers-hash_tables.ads, ai302-containers-hash_tables.adb:
	Update to new version of the AI302 containers.

	* ai302-containers-indefinite_hashed_maps.ads,
	  ai302-containers-indefinite_hashed_maps.adb:
	Update to new version of the AI302 containers.

	* ai302-containers-indefinite_ordered_sets.ads,
	  ai302-containers-indefinite_ordered_sets.adb:
	Update to new version of the AI302 containers.

	* ai302-containers-indefinite_vectors.ads,
	  ai302-containers-indefinite_vectors.adb:
	Update to new version of the AI302 containers.

	* ai302-containers-prime_numbers.ads,
	  ai302-containers-prime_numbers.adb:
	Update to new version of the AI302 containers.

	* ai302-containers-vectors.ads, ai302-containers-vectors.adb:
	Update to new version of the AI302 containers.

	* ai302-strings-hash.adb:
	Update to new version of the AI302 containers.
